added user register and login with JWT
