# internal/server/routes.go
@@ -10,6 +10,9 @@ func (s *FiberServer) RegisterFiberRoutes() {
 	s.App.Get("/health", s.healthHandler)
 	s.App.Get("/swagger/*", swagger.HandlerDefault) // Default serves swagger at /swagger/index.html
 
+	s.App.Post("/users/register", s.RegisterUser)
+	s.App.Post("users/login", s.LoginUser)
+
 	s.App.Post("/events", s.createEvent)
 	s.App.Get("/events/:id", s.getEvent)
 	s.App.Put("/events/:id", s.updateEvent)
